--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,7 +1,32 @@
 .active {
-  color: red;
+  color: #646cff;
+
 }
 
 .notActive {
-  color: blue;
+  opacity: 0.5;
+}
+
+.active, .notActive {
+  display: inline-block;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  transition: .5s;
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+
+.header {
+  padding: 1.5rem;
+}
+
+.header__ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-auto-flow: column;
+  place-items: center;
+  column-gap: 1.5rem;
 }
