--- a/src/pages/forms/cards/cards.scss
+++ b/src/pages/forms/cards/cards.scss
@@ -7,14 +7,30 @@
     display: grid;
     place-content: center;
     grid-auto-flow: row;
-    width: 300px;
-    background-color: lightblue;
-    border-radius: 5%;
+    width: auto;
+    background: #26235c;
+    box-shadow: 0px 4px 75px rgba(0, 0, 0, 0.25);
+    border-radius: 50px;
     color: white;
     text-transform: uppercase;
-
   }
   .item {
+    display: grid;
+    row-gap: 5px;
+    place-items: center;
     padding: 20px;
+    &__img {
+      display: grid;
+      justify-self: center;
+      border: 1px solid white;
+      border-radius: 50%;
+    }
+    &__text {
+      text-align: center;
+    }
+    &__delivery {
+      display: grid;
+      place-items: center;
+    }
   }
 }
