--- a/src/pages/forms/forms.scss
+++ b/src/pages/forms/forms.scss
@@ -51,7 +51,7 @@
 .submit-btn {
   border: none;
   outline: none;
-  background-color: lightblue;
+  background-color: lightgreen;
   grid-area: submit-btn;
   border-radius: 5px;
   height: 40px;
@@ -66,8 +66,11 @@
   transition: .5s;
   &:hover {
     transform: scale(1.1);
-    color: yellow;
     background-color: lightcoral;
+  }
+  &:disabled {
+    background: grey;
+    opacity: 0.8;
   }
 }
 
