--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,16 +1,4 @@
 @import './variables.scss';
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
 
 *,
 *::before,
@@ -34,25 +22,9 @@ body {
   font-style: normal;
   list-style: none;
   min-height: 100vh;
+  padding: 20px;
 }
 
-.base {
-  display: grid;
-  grid-template-areas:
-    'header'
-    'main'
-    'footer';
-  grid-template-rows: min-content 1fr min-content;
-  margin: auto;
-  height: 100vh;
-  overflow-x: clip;
-}
-
-h1,
-h2,
-h3 {
-  font-family: Baloo, 'Arial', sans-serif;
-}
 
 a {
   text-decoration: none;
