--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -12,9 +12,37 @@
 }
 
 .modal {
+  position: relative;
   display: grid;
   justify-self: center;
   z-index: 2;
-  width: 300px;
-  height: 150px;
+  width: 400px;
+  height: 250px;
+}
+
+.closeBtn {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  color: white;
+  border: none;
+  background: transparent;
+  outline: none;
+}
+.card {
+  display: grid;
+  padding: 1.2rem;
+  place-items: center;
+  gap: 5px;
+  background: #26235c;
+  box-shadow: 0px 4px 75px rgba(0, 0, 0, 0.25);
+  border-radius: 50px;
+  color: white;
+  &__name {
+    font: 1.5rem Open-Sans bolder;
+  }
+  &__username {
+    text-transform: uppercase;
+    font-style: bold;
+  }
 }
