--- a/src/components/grqphiql/graphiql.scss
+++ b/src/components/grqphiql/graphiql.scss
@@ -7,3 +7,13 @@
   height: 20px;
   border: 1px solid blue;
 }
+
+.wrapper-right {
+  display: flex;
+  flex: 1 1 0%;
+  flex-direction: column;
+}
+
+.bottom {
+  flex: 1 1 0%;
+}
